Food index now only displays current user's foods

--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -1,14 +1,16 @@
 <div class="container">
-  <h1>Food List</h1>
+  <h1>My Foods</h1>
   <% @foods.each do |food| %>
-    <div class="card">
-    <div class="card-body">
-      <h5 class="card-title"><%= food.name %></h5>
-      <small><%= food.user.email %></small>
-      <p><%= food.calories %> calories</p>
-      <p><%= food.portion_size %></p>
-      <p class="card-text"><%= food.notes %></p>
-    </div>
-  </div>
+    <% if policy(food).edit? %>
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title"><%= food.name %></h5>
+          <small><%= food.user.email %></small>
+          <p><%= food.calories %> calories</p>
+          <p><%= food.portion_size %></p>
+          <p class="card-text"><%= food.notes %></p>
+        </div>
+      </div>
+    <% end %>
   <% end %>
 </div>
