--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -4,7 +4,7 @@
     <% if policy(food).edit? %>
       <div class="card">
         <div class="card-body">
-          <h5 class="card-title"><%= food.name %></h5>
+          <h5 class="card-title"><%= link_to food.name, food_path(food) %></h5>
           <small><%= food.user.email %></small>
           <p><%= food.calories %> calories</p>
           <p><%= food.portion_size %></p>
