Added banner image to home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,8 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="banner" style="background-image: url('<%= asset_path "background-notebook-pencil-544115.jpg" %>')">
+  <div class="container">
+    <p>Count calories the old-fashioned way, but digital!</p>
+  </div>
+</div>
+<footer>
+Photo by <a href="https://www.pexels.com/@tirachard-kumtanom-112571?utm_content=attributionCopyText&utm_medium=referral&utm_source=pexels"> Tirachard Kumtanom</a> from <a href="https://www.pexels.com/photo/background-notebook-pencil-school-supplies-544115/?utm_content=attributionCopyText&utm_medium=referral&utm_source=pexels">Pexels</a>
+</footer>
