--- a/app/views/foods/show.html.erb
+++ b/app/views/foods/show.html.erb
@@ -2,6 +2,9 @@
   <div class="card">
     <div class="card-title">
       <h2><%= @food.name %></h2>
+      <span>
+        <button id="delete-btn" class="btn btn-danger">Delete</button><%= link_to "", food_path(@food), method: :delete, id: "delete-link", class: "hidden" %>
+      </span>
     </div>
     <div class="card-body">
       <p><%= @food.calories %> calories</p>
