Updated banner styling

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,6 +1,8 @@
 .banner {
   background-size: cover;
   background-position: center;
-  padding: 150px 0;
-  height: 75vh;
+  height: 100vh;
+  color: #eee;
+  text-align: center;
+  padding-top: 40vh;
 }
