Added some content and styled home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,54 @@
-<div class="banner" style="background-image: url('<%= asset_path "background-notebook-pencil-544115.jpg" %>')">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('<%= asset_path "background-notebook-pencil-544115.jpg" %>');">
   <div class="container">
-    <p>Count calories the old-fashioned way, but digital!</p>
+    <h1>Lose weight the old-fashioned way, by counting calories!</h1>
   </div>
 </div>
+
+<div class="container my-2">
+  <h2 class="text-center">How it Works</h2>
+    <div class="row">
+      <div class="col-4">
+        <div class="card">
+          <img src='<%= asset_path "accounting-balance-banking-159804.jpg"%>' alt="calculator with pen and paper in background" class="card-img-top card-image">
+          <div class="card-body">
+            <h4 class="card-title border-bottom">Calculate</h4>
+            <div class="card-text">
+              Enter daily caloric goal provided by a health care professional or use built-in calorie calculator to get an estimate.
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-4">
+        <div class="card">
+          <img src="<%= asset_path 'ballpen-blur-close-up-1925536.jpg' %>" alt="ballpoint pen writing on graph paper" class="card-img-top card-image">
+          <div class="card-body">
+            <h4 class="card-title border-bottom">Count</h4>
+            <div class="card-text">
+              Record the calories from your meals in your personal journal to watch your daily intake.
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-4">
+        <div class="card">
+          <img src="<%= asset_path 'action-active-activity-2091651.jpg' %>" alt="active woman posing with arm up and smiling" class="card-img-top card-image">
+          <div class="card-body">
+            <h4 class="card-title border-bottom">Lose Weight</h4>
+            <div class="card-text">
+              Maintain a healthy caloric deficit and over time you will lose weight while eating what you want!
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+</div>
 <footer>
-Photo by <a href="https://www.pexels.com/@tirachard-kumtanom-112571?utm_content=attributionCopyText&utm_medium=referral&utm_source=pexels"> Tirachard Kumtanom</a> from <a href="https://www.pexels.com/photo/background-notebook-pencil-school-supplies-544115/?utm_content=attributionCopyText&utm_medium=referral&utm_source=pexels">Pexels</a>
+Banner photo by <a href="https://www.pexels.com/@tirachard-kumtanom-112571"> Tirachard Kumtanom</a> from <a href="https://www.pexels.com/photo/background-notebook-pencil-school-supplies-544115/">Pexels</a>
+
+Calculator photo by Pixabay from <a href="https://www.pexels.com/photo/white-and-black-desk-calculator-on-white-graphing-paper-159804/">Pexels</a>
+
+Writing photo by <a href="https://www.pexels.com/@fotografierende">fotografierende</a> from <a href="https://www.pexels.com/photo/person-holding-orange-pen-1925536/">Pexels</a>
+
+Woman photo by Luis Quintero from <a href="https://www.pexels.com/photo/woman-in-white-tank-top-standing-on-concrete-surface-2091651/">Pexels</a>
 </footer>
