Added content to about us page and removed credits from home page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,24 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<div class="container">
+  <h1>About Us</h1>
+  <p>
+    This is a simple food journaling app created using Ruby on Rails. Please consult a doctor or physician before starting any diet, especially when you will be restricting calorie intake. This app should not be used in place of medical advice, and was created as a replacement to a pen and paper food journal.
+  </p>
+
+  <h2>Photo Credits</h2>
+  <div class="card my-2">
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item">
+      Banner photo by <a href="https://www.pexels.com/@tirachard-kumtanom-112571"> Tirachard Kumtanom</a> from <a href="https://www.pexels.com/photo/background-notebook-pencil-school-supplies-544115/">Pexels</a>
+    </li>
+    <li class="list-group-item">
+      Calculator photo by Pixabay from <a href="https://www.pexels.com/photo/white-and-black-desk-calculator-on-white-graphing-paper-159804/">Pexels</a>
+    </li>
+    <li class="list-group-item">
+      Writing photo by <a href="https://www.pexels.com/@fotografierende">fotografierende</a> from <a href="https://www.pexels.com/photo/person-holding-orange-pen-1925536/">Pexels</a>
+    </li>
+    <li class="list-group-item">
+      Woman photo by Luis Quintero from <a href="https://www.pexels.com/photo/woman-in-white-tank-top-standing-on-concrete-surface-2091651/">Pexels</a>
+    </li>
+  </ul>
+</div>
+</div>
