Footer should now stick to bottom

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,11 +12,15 @@
   </head>
 
   <body>
-    <%= render 'shared/navbar' %>
-    <%= render 'shared/flashes' %>
+    <div class="main-container">
 
-    <%= yield %>
-    <%= render 'shared/footer' %>
+      <%= render 'shared/navbar' %>
+      <%= render 'shared/flashes' %>
+
+      <%= yield %>
+      <%= render 'shared/footer' %>
+      
+    </div>
     <%= javascript_pack_tag 'application' %>
   </body>
 </html>
