--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,10 +1,30 @@
+html {
+  height: 100%;
+  box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+.main-container {
+  min-height: 100vh;
+  position: relative;
+  padding-bottom: 65px;
+}
+
 .footer-container {
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  height: 100px;
+  height: 50px;
+  width: 100%;
   padding: 0px 50px;
   background-color: #98c9bc;
+  position: absolute;
+  bottom: 0;
 }
 
 .footer-container ul {
