Dropdown issue resolved

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -12,6 +12,6 @@
   font-size: 32px;
 }
 
-.navbar-lewagon-white {
-  background-color: white;
+.navbar-lewagon-teal {
+  background-color: #98c9bc;
 }
