--- a/app/views/foods/show.html.erb
+++ b/app/views/foods/show.html.erb
@@ -1,15 +1,17 @@
-<div class="container">
-  <div class="card">
-    <div class="card-title">
-      <h2><%= @food.name %></h2>
-      <span>
-        <button id="delete-btn" class="btn btn-danger">Delete</button><%= link_to "", food_path(@food), method: :delete, id: "delete-link", class: "hidden" %>
-      </span>
-    </div>
-    <div class="card-body">
-      <p><%= @food.calories %> calories</p>
-      <p>Portion size: <%= @food.portion_size %></p>
-      <p>Additional Notes: <%= @food.notes %></p>
+<div class="navbar-wrapper">
+  <div class="container">
+    <div class="card">
+      <div class="card-title">
+        <h2><%= @food.name %></h2>
+        <span>
+          <button id="delete-btn" class="btn btn-danger">Delete</button><%= link_to "", food_path(@food), method: :delete, id: "delete-link", class: "hidden" %>
+        </span>
+      </div>
+      <div class="card-body">
+        <p><%= @food.calories %> calories</p>
+        <p>Portion size: <%= @food.portion_size %></p>
+        <p>Additional Notes: <%= @food.notes %></p>
+      </div>
     </div>
   </div>
 </div>
