--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -1,16 +1,18 @@
-<h1>Food Entries</h1>
+<div class="navbar-wrapper">
+  <h1>Food Entries</h1>
 
-<% @entries.each do |fe| %>
-  <div class="card">
-    <div class="card-body">
-      <div class="card-title"><%= fe.first %></div>
-      <% fe.second.each do |ent| %>
-        <% ent.foods.each do |food| %>
-          <% if policy(food).edit? %>
-            <p><%= food.name %> <small><%= food.user.email %></small></p>
+  <% @entries.each do |fe| %>
+    <div class="card">
+      <div class="card-body">
+        <div class="card-title"><%= fe.first %></div>
+        <% fe.second.each do |ent| %>
+          <% ent.foods.each do |food| %>
+            <% if policy(food).edit? %>
+              <p><%= food.name %> <small><%= food.user.email %></small></p>
+            <% end %>
           <% end %>
         <% end %>
-      <% end %>
+      </div>
     </div>
-  </div>
-<% end %>
+  <% end %>
+</div>
