--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -1,16 +1,18 @@
-<div class="container">
-  <h1>My Foods</h1>
-  <% @foods.each do |food| %>
-    <% if policy(food).edit? %>
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title"><%= link_to food.name, food_path(food) %></h5>
-          <small><%= food.user.email %></small>
-          <p><%= food.calories %> calories</p>
-          <p><%= food.portion_size %></p>
-          <p class="card-text"><%= food.notes %></p>
+<div class="navbar-wrapper">
+  <div class="container">
+    <h1>My Foods</h1>
+    <% @foods.each do |food| %>
+      <% if policy(food).edit? %>
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title"><%= link_to food.name, food_path(food) %></h5>
+            <small><%= food.user.email %></small>
+            <p><%= food.calories %> calories</p>
+            <p><%= food.portion_size %></p>
+            <p class="card-text"><%= food.notes %></p>
+          </div>
         </div>
-      </div>
+      <% end %>
     <% end %>
-  <% end %>
+  </div>
 </div>
