--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,23 +3,18 @@
     <i class="far fa-list-alt"></i>
   <% end %>
 
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-    <% if user_signed_in? %>
-      <li class="nav-item dropdown">
-        <%= image_tag "https://avatars0.githubusercontent.com/u/44857346?v=4", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-          <%= link_to "My Foods", foods_path, class: "dropdown-item" %>
-          <%= link_to "My Journal", entries_path, class: "dropdown-item" %>
-          <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
-        </div>
-      </li>
-      <% end %>
-    </ul>
-  </div>
+  <% if user_signed_in? %>
+    <div class="nav-item dropdown">
+      <%= image_tag "https://avatars0.githubusercontent.com/u/44857346?v=4", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+      <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+        <%= link_to "My Foods", foods_path, class: "dropdown-item" %>
+        <%= link_to "My Journal", entries_path, class: "dropdown-item" %>
+        <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+      </div>
+    </div>
+  <% else %>
+    <div class="nav-item">
+      <%= link_to "Login/Signup", new_user_session_path, class: "nav-link" %>
+    </div>
+  <% end %>
 </div>
