--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
 <div class="container my-2">
   <h2 class="text-center">How it Works</h2>
     <div class="row">
-      <div class="col-4">
+      <div class="col-12 col-md-4">
         <div class="card">
           <img src='<%= asset_path "accounting-balance-banking-159804.jpg"%>' alt="calculator with pen and paper in background" class="card-img-top card-image">
           <div class="card-body">
@@ -18,7 +18,7 @@
           </div>
         </div>
       </div>
-      <div class="col-4">
+      <div class="col-12 col-md-4">
         <div class="card">
           <img src="<%= asset_path 'ballpen-blur-close-up-1925536.jpg' %>" alt="ballpoint pen writing on graph paper" class="card-img-top card-image">
           <div class="card-body">
@@ -29,7 +29,7 @@
           </div>
         </div>
       </div>
-      <div class="col-4">
+      <div class="col-12 col-md-4">
         <div class="card">
           <img src="<%= asset_path 'action-active-activity-2091651.jpg' %>" alt="active woman posing with arm up and smiling" class="card-img-top card-image">
           <div class="card-body">
