--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -1,6 +1,11 @@
 <div class="navbar-wrapper">
   <div class="container">
-    <h1>My Foods</h1>
+    <div class="d-flex justify-content-between align-items-center">
+      <h1>My Foods</h1>
+      <%= link_to new_food_path do%>
+        <div class="btn btn-primary">Add new food</div>
+      <% end %>
+    </div>
     <% @foods.each do |food| %>
       <% if policy(food).edit? %>
         <div class="card">
