--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -4,14 +4,12 @@
   <% @entries.each do |fe| %>
     <div class="card">
       <div class="card-body">
-        <div class="card-title"><%= link_to fe.first, entry_path(fe.second) %></div>
-        <% fe.second.each do |ent| %>
-          <% ent.foods.each do |food| %>
+        <div class="card-title"><%= link_to fe.entry_date, entry_path(fe) %></div>
+          <% fe.foods.each do |food| %>
             <% if policy(food).edit? %>
               <p><%= food.name %> <small><%= food.user.email %></small></p>
             <% end %>
           <% end %>
-        <% end %>
       </div>
     </div>
   <% end %>
