--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -1,16 +1,18 @@
 <div class="navbar-wrapper">
-  <h1>Food Entries</h1>
-
-  <% @entries.each do |fe| %>
-    <div class="card">
-      <div class="card-body">
-        <div class="card-title"><%= link_to fe.entry_date, entry_path(fe) %></div>
-          <% fe.foods.each do |food| %>
-            <% if policy(food).edit? %>
-              <p><%= food.name %> <small><%= food.user.email %></small></p>
-            <% end %>
-          <% end %>
-      </div>
+  <div class="container">
+    <h1>Food Entries</h1>
+    <div class="calendar-wrapper">
+      <%= month_calendar events: @entries do |date, entries| %>
+        <%= date.month %>/<%= date.day %>
+        <br>
+        <% entries.each do |entry| %>
+          <small>
+            <%= link_to "View Records", entry_path(entry) %>
+          </small>
+          <p>Calorie total: <%= entry.sum_calories %></p>
+          <p>Deficit: ####</p>
+        <% end %>
+      <% end %>
     </div>
-  <% end %>
+  </div>
 </div>
