--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -11,10 +11,7 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title"><%= link_to food.name, food_path(food) %></h5>
-            <small><%= food.user.email %></small>
-            <p><%= food.calories %> calories</p>
-            <p><%= food.portion_size %></p>
-            <p class="card-text"><%= food.notes %></p>
+            <p class="card-text"><%= food.calories %> Calories</p>
           </div>
         </div>
       <% end %>
