--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -3,9 +3,11 @@
     <h2><%= @entry.entry_date.strftime('%b %d %Y') %></h2>
     <h3>Total calories: <%= @calories %></h3>
     <% @entry.foods.each do |food| %>
-      <p style="margin: 0;"><%= food.name %> (Portion: <%= food.portion_size %>)</p>
-      <small>submitted by <%= food.user.email %></small>
-      <p><%= food.calories %> Calories</p>
+      <div class="food-container" data-food-id="<%= food.id %>">
+        <p style="margin: 0;"><%= food.name %> (Portion: <%= food.portion_size %>) <span><%= link_to "Remove", remove_food_entry_path(entry: @entry, food: food), method: :delete, remote: true %></span></p>
+        <small>submitted by <%= food.user.email %></small>
+        <p><%= food.calories %> Calories</p>
+      </div>
     <% end %>
 
     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addFood">
