--- a/app/views/entries/_edit.html.erb
+++ b/app/views/entries/_edit.html.erb
@@ -1,4 +1,4 @@
 <%= simple_form_for @entry do |f| %>
-  <%= f.input :foods, collection: Food.where(user: current_user) %>
+  <%= f.input :foods, collection: Food.joins(:entries).where('foods.user_id = ? AND entries_foods.food_id NOT IN (?)', current_user, @entry.foods.map{ |f| f.id }).distinct %>
   <%= f.submit %>
 <% end %>
