--- a/app/views/calorie_goals/_new.html.erb
+++ b/app/views/calorie_goals/_new.html.erb
@@ -1,1 +1,11 @@
-<h1>Add a new calorie goal</h1>
+<div class="container">
+  <div class="row justify-content-start">
+    <div class="col-4">
+      <h2>Update calorie goal</h2>
+      <%= simple_form_for calorie_goal do |f| %>
+        <%= f.input :calories, label: false %>
+        <%= f.button :submit, value: "Update", class: "btn btn-primary" %>
+      <% end %>
+    </div>
+  </div>
+</div>
