Integrated bmr calorie calculator

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,7 +9,7 @@
       <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
         <%= link_to "My Foods", foods_path, class: "dropdown-item" %>
         <%= link_to "My Journal", entries_path, class: "dropdown-item" %>
-        <%= link_to "Calorie Calculator", calculator_path, class: "dropdown-item" %>
+        <%= link_to "BMR Calculator", calculator_path, class: "dropdown-item" %>
         <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
       </div>
     </div>
