--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -1,24 +1,7 @@
 <div class="navbar-wrapper">
   <div class="container">
     <h1>Food Entries</h1>
-    <button class="btn btn-primary" data-toggle="modal" data-target="#createEntry">
-    Add new entry
-    </button>
-    <div class="modal fade" id="createEntry" tabindex="-1" role="dialog" aria-labelledby="createEntryLabel" aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="createEntryLabel">Create New Entry</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <%= render 'new' %>
-          </div>
-        </div>
-      </div>
-    </div>
+    <%= link_to "Add new entry", new_entry_path, class: "btn btn-primary" %>
     <div class="calendar-wrapper">
       <%= month_calendar events: @entries do |date, entries| %>
         <%= date.month %>/<%= date.day %>
