--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -20,6 +20,9 @@
         <li class="list-group-item">
           Woman photo by Luis Quintero from <a href="https://www.pexels.com/photo/woman-in-white-tank-top-standing-on-concrete-surface-2091651/">Pexels</a>
         </li>
+        <li class="list-group-item">
+          <div>Default user image made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+        </li>
       </ul>
     </div>
   </div>
