--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,7 +5,7 @@
 
   <% if user_signed_in? %>
     <div class="nav-item dropdown">
-      <%= image_tag "https://avatars0.githubusercontent.com/u/44857346?v=4", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+      <%= image_tag User.check_profile_image(current_user), class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
       <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
         <%= link_to "My Foods", foods_path, class: "dropdown-item" %>
         <%= link_to "My Journal", entries_path, class: "dropdown-item" %>
