--- a/app/views/entries/_edit.html.erb
+++ b/app/views/entries/_edit.html.erb
@@ -1,4 +1,7 @@
 <%= simple_form_for @entry do |f| %>
   <%= f.input :foods, collection: Food.where('user_id = ? AND id NOT IN (?)', current_user, @entry.foods.empty? ? 0 : @entry.foods.map{ |f| f.id }).distinct, include_blank: false %>
+  <%= f.simple_fields_for :entry_foods do |p| %>
+    <%= p.input :quantity, label: 'Portion', placeholder: 'Ex. 0.5, 1.75, 3', hint: 'If nothing is entered, default value of 1 is used' %>
+  <% end %>
   <%= f.submit %>
 <% end %>
